2008-10-21  Michael Calmer  <mc@suse.de>
	* release version 0.64

	* src/mod_pam_selinux.c: New
	* src/supported-modules.h: Add pam_pwhistory.
	* src/Makefile.am (pam_config_SOURCES): Add mod_pam_selinux.c.
	* src/sanity_checks.c: Check that pam_selinux and pam_apparmor are
	not enabled at the same time.
	* po/ : update translations
	
2008-10-14  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.63

	* src/mod_pam_pwhistory.c: New.
	* src/supported-modules.h: Add pam_pwhistory.
	* src/pam-config.c (main): Enable pam_pwhistory if pam_cracklib
	is enabled for initial config.

	* src/Makefile.am (pam_config_SOURCES): Add mod_pam_pwhistory.c.

	* src/pam-module.h (DECLARE_BOOL_OPTS_10): Add.
	* src/mod_pam_lastlog.c: Add new options.

2008-10-07  Michael Calmer  <mc@suse.de>

	* release version 0.62

	* src/mod_pam_fp.c: New file (FATE#300416).
	* src/mod_pam_thinkfinger.c: check for pam_fp.
	* src/mod_pam_mount.c: Likewise.

2008-10-06  Michael Calmer  <mc@suse.de>

	* release version 0.61

	* src/mod_pam_pwcheck.c: call set_opt with strdup to prevent
	the lost of the value.
	* src/mod_pam_krb5.c: Likewise.
	* src/mod_pam_ssh.c: Likewise.
	* tests/testcases/test-pwcheck-string-opts.single: add testcase

2008-10-03  Thorsten Kukuk  <kukuk@suse.de>

	* src/pam-config.c: If module->getopt returns 2, don't print
	message about wrong option.
	* src/pam-module.h: Return 2 if sanity check fails.
	* src/pam-module.c: Use error code of module->getopt.

2008-09-04  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.60

	* src/mod_pam_pwcheck.c: Remove nisdir.

2008-09-03  Thorsten Kukuk  <kukuk@thkukuk.de>

	* src/pam-module.h: Ignore "empty"  key.

2008-09-03  Michael Calmer  <mc@suse.de>

	* supported-modules.h: move pam_group to the beginning of auth.
	Move pam_ssh before the first sufficient module which requires a
	password.
	* src/mod_pam_krb5.c: remove special check for pam_group.

2008-09-01  Thorsten Kukuk  <kukuk@thkukuk.de>
